--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -14,37 +14,52 @@
     <link rel="stylesheet" href="{% static '/common/css/navbar.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    
+
 </head>
 
 <body>
-    <nav class="main-nav-bar">
-        <div class="nav-wrapper">
-            <div class="logo">
-                <img src="{% static 'blog_logo.png' %}" alt="">
-                <h2>BLOGOSPHARE</h2>
+    <nav class="main-nav-bar shadow-sm">
+        <div class="nav-content-wrapper">
+            <div class="nav-wrapper">
+                <div class="logo">
+                    <img src="{% static 'blog_logo.png' %}" alt="">
+                    <h2>BLOGOSPHARE</h2>
+                </div>
+
+                <div class="nav-items-wrapper">
+                    <ul class="nav-items">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li class="dropdown">
+                            <button id="category-btn">
+                                CATEGORIES
+                                <span><i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </span>
+                            </button>
+                            <ul class="category-items">
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Academy</a></li>
+                                <li><a href="#">Reviews</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="nav-items-wrapper">
-                <ul class="nav-items">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li class="dropdown">
-                        <button id="category-btn">
-                            CATEGORIES
-                            <span><i class="fa fa-caret-down" aria-hidden="true"></i>
-                            </span>
-                        </button>
-                        <ul class="category-items">
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Academy</a></li>
-                            <li><a href="#">Reviews</a></li>
-                        </ul>
-                    </li>
-                </ul>
+            <div class="nav-bar-search">
+                <form action="#" class="search">
+                    <input type="search" placeholder="search blog">
+                    <button style="margin-left: 5px;" class="btn btn-dark"><i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                </form>
+                <form action="">
+                    <button type="submit" class="btn btn-outline-primary">Login</button>
+                </form>
+                <form action="">
+                    <button type="submit" class="btn btn-outline-danger">Signup</button>
+                </form>
 
             </div>
-
         </div>
     </nav>
 </body>
