--- a/MyBlog/static/common/css/navbar.css
+++ b/MyBlog/static/common/css/navbar.css
@@ -1,7 +1,12 @@
+body{
+    background-color: rgb(252, 252, 252);
+}
+
 .main-nav-bar {
     /* border: 1px solid red; */
     position: relative;
     padding: 1.4rem 10%;
+    background-color: white;
 
 }
 
@@ -9,6 +14,7 @@
 .nav-content-wrapper {
     display: flex;
     justify-content: space-between;
+    /* border: 1px solid red; */
 }
 
 /* ####################### Logo styling #################### */
@@ -16,7 +22,10 @@
 .logo {
     display: flex;
     align-items: center;
-    /* border: 1px solid red;/ */
+
+    justify-content: center;
+
+
 }
 
 .logo img {
@@ -27,6 +36,8 @@
 .logo h2 {
     font-size: 1.5rem;
     font-weight: bold;
+    margin-bottom: 0;
+   
 }
 
 
@@ -105,4 +116,23 @@
     border:1px solid grey;
     border-radius: 3px;
     padding: 7px;
+}
+
+
+
+/* ######################### slogan section ##################3 */
+
+.slogan-logo img{
+    height: 5rem;
+    width: 5rem;
+}
+
+.slogan{
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3rem;
+    gap: 1rem;
+
 }
