nav bar styling

--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-    <nav class="main-nav-bar ">
+    <nav class="main-nav-bar bg-dark">
         <div class="nav-content-wrapper">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <img src="{% static 'blog_logo.png' %}" alt="">
+                    <img src="{% static 'blog_logo.svg' %}" alt="">
 
                     <h2>BLOGOSPHARE</h2>
 
@@ -50,7 +50,7 @@
 
             <div class="nav-bar-search">
                 <form action="#" class="search">
-                    <input type="search" placeholder="search blog">
+                    <input type="search" placeholder="search blog" class="search-bar bg-dark">
                     <button style="margin-left: 5px;" class="btn btn-dark"><i class="fa fa-search"
                             aria-hidden="true"></i>
                     </button>
@@ -59,16 +59,16 @@
                     <button type="submit" class="btn btn-outline-primary">Login</button>
                 </form>
                 <form action="">
-                    <button type="submit" class="btn btn-outline-danger">Signup</button>
+                    <button type="submit" class="btn btn-danger">Signup</button>
                 </form>
 
             </div>
         </div>
     </nav>
-    <section class="shadow-sm" style="background-color: white;">
+    <section class="shadow-sm" style="background-color: rgb(255, 255, 255);">
         <div class="slogan">
             <div class="slogan-logo" style="display: flex;">
-                <img src="{% static 'blog_logo.png' %}" alt="">
+                <img src="{% static 'blog_logo.svg' %}" alt="">
                 <!-- <h1>BLOGOSPHARE</h1> -->
             </div>
             <h2>Dive into the Depths of Knowledge</h2>
