--- a/MyBlog/static/common/css/navbar.css
+++ b/MyBlog/static/common/css/navbar.css
@@ -1,13 +1,13 @@
 body{
-    background-color: rgb(252, 252, 252);
+    /* background-color: rgb(252, 252, 252); */
 }
 
 .main-nav-bar {
     /* border: 1px solid red; */
     position: relative;
     padding: 1.4rem 10%;
-    background-color: white;
-
+    
+  
 }
 
 
@@ -37,6 +37,8 @@ body{
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 0;
+    color: white;
+   
    
 }
 
@@ -60,7 +62,7 @@ body{
 .nav-items li {
     list-style: none;
     margin: 0 2rem;
-
+    
 }
 
 .nav-items {
@@ -69,6 +71,7 @@ body{
     /* border: 1px solid red; */
     align-items: center;
     margin: auto;
+    
 }
 
 .category-items {
@@ -76,11 +79,13 @@ body{
     /* border: 1px solid red; */
     position: absolute;
     z-index: 999;
+    /* color: white; */
+    background-color: black;
 }
 
 .nav-items a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .nav-items {
@@ -96,6 +101,7 @@ body{
 #category-btn {
     background: none;
     border: none;
+    color: white;
 }
 
 
@@ -110,14 +116,19 @@ body{
     align-items: center;
 }
 
-.nav-bar-search form input {
+.nav-bar-search form .search-bar {
     height: 37px;
     border:none;
-    border:1px solid grey;
+    border:1px solid rgb(129, 129, 129);
     border-radius: 3px;
     padding: 7px;
+    outline: none;
+    color: white;
 }
 
+.nav-bar-search .search input::placeholder{
+    color: rgb(255, 255, 255);
+}
 
 
 /* ######################### slogan section ##################3 */
@@ -125,6 +136,7 @@ body{
 .slogan-logo img{
     height: 5rem;
     width: 5rem;
+    /* background-color: red; */
 }
 
 .slogan{
