nav bar styling

--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -65,14 +65,18 @@
             </div>
         </div>
     </nav>
-    <section class="shadow-sm" style="background-color: rgb(255, 255, 255);">
+    <section class=" slogan-section">
+        <div class="blog-background-img">
+            <img src="{% static 'blog-background5.jpeg' %}" alt="">
+        </div>
         <div class="slogan">
             <div class="slogan-logo" style="display: flex;">
-                <img src="{% static 'blog_logo.svg' %}" alt="">
+                <img src="{% static 'blog_logo.svg' %}"  alt="">
                 <!-- <h1>BLOGOSPHARE</h1> -->
             </div>
-            <h2>Dive into the Depths of Knowledge</h2>
-            <button class="btn btn-dark fw-bold">Share you thoughts</button>
+            <h1 class="fw-bold">Dive into the Depths of Knowledge</h1>
+            <h5>Create a unique and beautiful blog easily.</h5>
+            <button class="btn btn-success fw-bold">Share you thoughts</button>
         </div>
     </section>
 </body>
