--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static '/common/css/navbar.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500&family=Poppins:wght@100;200;300;400;500;600;700&family=Protest+Revolution&display=swap" rel="stylesheet">
 
 
 </head>
@@ -55,28 +56,213 @@
                             aria-hidden="true"></i>
                     </button>
                 </form>
-                <form action="">
-                    <button type="submit" class="btn btn-outline-primary">Login</button>
-                </form>
-                <form action="">
-                    <button type="submit" class="btn btn-danger">Signup</button>
-                </form>
+                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Login</button>
 
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#exampleModalRegister">Sign Up</button>
+            </div>
+        </div>
+
+        <!-- Button trigger modal -->
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content d-flex flex-row">
+                    <div class="login-wrapper w-50">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5 fw-bold mt-3" id="exampleModalLabel">Log In</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-4">
+                                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
+                                    </div> -->
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Login</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="login-img w-50 position-relative">
+                        <img class="w-100 h-100 rounded-end" src="{% static 'blog_background3.jpg' %}" alt="">
+                        <h2 class="position-absolute top-0 text-center font-cursive fw-bold mt-3" style="color: #e48e0eec; font-family: 'Protest Revolution', sans-serif;">Wellcome back to Blogosphare</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="modal fade" id="exampleModalRegister" tabindex="-1" aria-labelledby="exampleModalLabelRegister" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content d-flex">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5 fw-bold mt-3" id="exampleModalLabelRegister">Register</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-4">
+                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <input type="email" class="form-control border-secondary-subtle" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp">
+                                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
+                                </div> -->
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="form-control border-secondary-subtle" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword2" class="form-label">Password2</label>
+                                <input type="password" class="form-control border-secondary-subtle" id="exampleInputPassword2">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-danger">Sign up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
+
+
     <section class=" slogan-section">
         <div class="blog-background-img">
             <img src="{% static 'blog-background5.jpeg' %}" alt="">
         </div>
         <div class="slogan">
             <div class="slogan-logo" style="display: flex;">
-                <img src="{% static 'blog_logo.svg' %}"  alt="">
+                <img src="{% static 'blog_logo.svg' %}" alt="">
                 <!-- <h1>BLOGOSPHARE</h1> -->
             </div>
             <h1 class="fw-bold">Dive into the Depths of Knowledge</h1>
             <h5>Create a unique and beautiful blog easily.</h5>
             <button class="btn btn-success fw-bold">Share you thoughts</button>
+        </div>
+    </section>
+
+    <section class="recent_blog py-5">
+        <h1 class="mb-5 fw-bold text-center">Recent Blogs</h1>
+        <div class="recent_blog_wrapper cards gap-2">
+
+            <div class="card">
+                <h3 class="fw-bold">title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero esse totam
+                    nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex! Eius,
+                    obcaecati rerum.</p>
+
+            </div>
+            <div class="card">
+                <h3 class="fw-bold">title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero esse totam
+                    nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex! Eius,
+                    obcaecati rerum.</p>
+
+            </div>
+            <div class="card">
+                <h3 class="fw-bold">title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero esse totam
+                    nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex! Eius,
+                    obcaecati rerum.</p>
+
+            </div>
+            <div class="card">
+                <h3 class="fw-bold">title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero esse totam
+                    nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex! Eius,
+                    obcaecati rerum.</p>
+            </div>
+            <div class="card">
+                <h3 class="fw-bold">title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero esse totam
+                    nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex! Eius,
+                    obcaecati rerum.</p>
+            </div>
+            <div class="card">
+                <h3 class="fw-bold">title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero esse totam
+                    nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex! Eius,
+                    obcaecati rerum.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="all_blog_container my-5">
+        <div class="blog-cat-wrapper">
+            <div class="all_blog_wrapper">
+                <div class="blog_card px-5 my-5">
+                    <div class="blog_content">
+                        <h3 class="fw-bold">title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
+                            esse totam
+                            nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
+                            Eius,
+                            obcaecati rerum.</p>
+                    </div>
+                    <div class="blog_img">
+                        <img src="{% static 'blog_background.jpg' %}" alt="">
+                    </div>
+                </div>
+                <div class="blog_card px-5 my-5">
+                    <div class="blog_content">
+                        <h3 class="fw-bold">title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
+                            esse totam
+                            nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
+                            Eius,
+                            obcaecati rerum.</p>
+                    </div>
+                    <div class="blog_img">
+                        <img src="{% static 'blog_background.jpg' %}" alt="">
+                    </div>
+                </div>
+                <div class="blog_card px-5 my-5">
+                    <div class="blog_content">
+                        <h3 class="fw-bold">title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
+                            esse totam
+                            nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
+                            Eius,
+                            obcaecati rerum.</p>
+                    </div>
+                    <div class="blog_img">
+                        <img src="{% static 'blog_background.jpg' %}" alt="">
+                    </div>
+                </div>
+                <div class="blog_card px-5 my-5">
+                    <div class="blog_content">
+                        <h3 class="fw-bold">title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius deleniti repellat eum libero
+                            esse totam
+                            nisi ducimus quae vel, ullam inventore nostrum distinctio eligendi voluptatem sapiente ex!
+                            Eius,
+                            obcaecati rerum.</p>
+                    </div>
+                    <div class="blog_img">
+                        <img src="{% static 'blog_background.jpg' %}" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cat_card">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error inventore voluptates nam! Ipsa nulla
+                aut, natus quaerat, eum delectus dolor ipsam quae dicta aspernatur illum eaque omnis laborum quam
+                molestiae.
+            </div>
         </div>
     </section>
 </body>
