--- a/MyBlog/static/common/css/navbar.css
+++ b/MyBlog/static/common/css/navbar.css
@@ -187,3 +187,59 @@ body{
     z-index: -4;
     /* display:none; */
 }
+
+
+
+/* ############################ recent_blog styling ######################### */
+
+.recent_blog{
+    border-bottom: 1px solid grey;
+}
+.card{
+    padding: 1rem;
+}
+
+
+.cards{
+    margin: 0 10%;
+    max-width: 1800px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+}
+
+
+/* ############################## blog list styling ################################# */
+
+.blog-cat-wrapper{
+    margin: 0 10%;
+    display: flex;
+}
+
+
+.all_blog_container .blog_img img{
+    width: 100%;
+    height: 100%;
+    object-fit: fit;
+}
+.all_blog_container .blog_img{
+
+    border: 1px solid red;
+    width: 30rem;
+    height: 10rem;
+    flex-basis: 30%;
+}
+
+.blog_content{
+    flex-basis: 70%;
+}
+.blog_card{
+    display: flex;
+    flex: 1;
+}
+
+.cat_card{
+    flex: 50rem;
+}
+
+
+
