--- a/MyBlog/common/templates/base.html
+++ b/MyBlog/common/templates/base.html
@@ -80,14 +80,14 @@
                             <form>
                                 <div class="mb-4">
                                     <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                    <input type="email" class="form-control border-secondary-subtle" id="exampleInputEmail1"
                                         aria-describedby="emailHelp">
                                     <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
                                     </div> -->
                                 </div>
-                                <div class="mb-3">
+                                <div class="mb-5">
                                     <label for="exampleInputPassword1" class="form-label">Password</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1">
+                                    <input type="password" class="form-control border-secondary-subtle" id="exampleInputPassword1">
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
